---------------------------------------------------------------------------------------------------
Version: 20.2.8
Date: 2022-08-XXX
  Features:
  Changes:
    - Battlefluffy - lamps turn on at lower light levels, so they are on over dusk rather than sometimes being post dusk.
    - Battlefluffy - all light effects start when the map is only a litle bit dark, so while still slightly brighted than vanilla Factorio.
    - Battlefluffy - larger explosions and fires moved to having a bright inner light and a larger weaker lighting effect to highlight the shadows.
    - Battlefluffy - flamethrower turrets have a proper idle flame glow.
  Bugfixes:
  Info:
    - Version numbers back on track. Last 2 versions were released under an old minor version number. This did mess up Factorio's feature to update to the latest version for them.
---------------------------------------------------------------------------------------------------
Version: 20.2.7
Date: 2022-08-20
  Features:
  Changes:
  Bugfixes:
    - Fire Place mod is optional as intended (no errors on startup if missing).
    - Camp Fire can't be opened by players.
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.6
Date: 2022-08-20
  Features:
    - Added mode: Battlefluffy Scenario
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.5
Date: 2022-06-24
  Features:
    - JD Spider Race - Has been modified for play testing with a reduced spider. See readme/mod description for details. These changes will be reverted/balanced in future main releases.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.4
Date: 2022-06-16
  Features:
  Changes: